# ChangeLog for media-gfx/graphicsmagick
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  23 Aug 2008; Thomas Beierlein (TomJBE) <tb@forth-ev.de> metadata.xml:
  Added local USE flag description wrt GLEP 56

  04 Aug 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  graphicsmagick-1.2.5.ebuild:
  Whitespace

  03 Aug 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  graphicsmagick-1.2.5.ebuild:
  econf dies on its own

  03 Aug 2008; Janne Rönkkö (jroo) <jroo@iki.fi>
  graphicsmagick-1.2.5.ebuild:
  Corrected license for graphicsmagick-1.2.5.

  02 Aug 2008; Janne Rönkkö (jroo) <jroo@iki.fi>
  +graphicsmagick-1.2.5.ebuild, +metadata.xml:
  New Ebuild for bug 190372.
