@@ -1,4 +1,5 @@
-DIST GraphicsMagick-1.2.5.tar.bz2 5983638 RMD160 e51903b1cd730ab3ac5e63c6ace066f2fc995df9 SHA1 dc3afe844138c3ae1a0208c196cb092827a8c7db SHA256 c51236aa0e592d5d61a7b7658d0129099f302fba7216c64a91ce66c0d574c33a
-EBUILD graphicsmagick-1.2.5.ebuild 2493 RMD160 5bcd3f185bcf3fdebd4c06b6dc7b4ccb020d838a SHA1 8fc360b7653a367eb58683308c15b3120994fa8a SHA256 30a6571730d1a40ec88294cbab6f1d57d61178c4bf336f3bb5b17a29b63527ec
-MISC ChangeLog 718 RMD160 e345c4a886b65bbccdd92426d40efe5db9ce82df SHA1 843a77159b3a0de69f649ea7bdc8e8ce663ddcb8 SHA256 90c81e7a29a268b1b6c53c471cb62ece2433119ae1eeef5e2977f84678e2e23e
+DIST GraphicsMagick-1.3.tar.bz2 7635311 RMD160 05dd1877d59baf48bc5afc12934cddd1dd76b539 SHA1 e49fbdb1216816c3c8346c1033a9e6c750564163 SHA256 e9567ef373c6a0a2706ec74453354b18c3695db7e3c4b17d117d324e58bce845
+EBUILD graphicsmagick-1.3.ebuild 2702 RMD160 df3ff447ae1bf0bcfa9316c7fa496be8ed60dcd7 SHA1 10def54a76d59f5fc12377e8dfd04a35dca48c04 SHA256 4a5ccc38b95d8e88394ea09ad671076cfe1d2611973e3d43944ddec41fcbb0be
+MISC .graphicsmagick-1.3.ebuild.swp 12288 RMD160 cd00624cb1124c365b2ec12c13c16223c173a336 SHA1 0f8cf3ab9b42baa6d329f1d8ec8575e7363b3645 SHA256 e2b954f70003b7caacffa27a3e32b8ffeb626706c57463efe681f82dcf2d08ca
+MISC ChangeLog 865 RMD160 f8192f0d08773b0b4adf06fd60ee7fb6c55b2ee8 SHA1 42a8455b6017bd7749d547e60f8eefc3fc8febe7 SHA256 e6849dc37ccb6bcd8833ed1654972b6f52426b618ee376f2d3c067c3a6cce672
 MISC metadata.xml 501 RMD160 042c33630cb319f7dbcefa2c1eab7aff1c4e41b4 SHA1 dd5417367a3ce97a97381a667825caf394dd0055 SHA256 af9f0a524093f7cdfe548ac76f50849a3cdaf48c0176736e74523671805a8b0b
