@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  16 Nov 2008; Janne Rönkkö (jroo) <jroo@iki.fi>
+  -graphicsmagick-1.2.5.ebuild, +graphicsmagick-1.3.ebuild:
+  Version bump for graphicsmagick.
+
   23 Aug 2008; Thomas Beierlein (TomJBE) <tb@forth-ev.de> metadata.xml:
   Added local USE flag description wrt GLEP 56
 
